[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/StateMachine/GolemBossEnemy/KeepDistanceAttackState.gd" type="Script" id=1]

[node name="KeepDistanceAttackState" type="Node"]
script = ExtResource( 1 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageTakenTimer" type="Timer" parent="."]

[node name="PatternCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="SpikeWaveCooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpikeSpawnDelayTimer" type="Timer" parent="."]
one_shot = true
